# mb-calc

./: .gitignore  ENVIRONMENT.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
src/mb_calc/: __init__.py  app.py  calculator.py  evaluator.py
src/mb_calc.dist-info/: METADATA  top_level.txt
src/mb_calc/resources/: mbcalc.icns
tests/: test_calculator.py  test_evaluator.py  test_init.py
