[project]
name = "mb-calc"
version = "0.1.0"
description = "A lightweight macOS menu-bar calculator."
readme = "README.md"
authors = [{ name = "PH Tools", email = "phtools@bldgtyp.com" }]
requires-python = ">=3.14"
dependencies = ["rumps>=0.4.0"]

[project.scripts]
mb-calc = "mb_calc:main"

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ruff>=0.5.0",
    "isort>=5.13.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "coverage>=7.11.1",
    "pytest-cov>=7.0.0",
]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.isort]
profile = "black"
known_first_party = ["mb_calc"]
line_length = 120

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true
show_error_codes = true
